--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "next": "13.5.4",
     "next-cloudinary": "^4.24.0",
     "react": "^18",
-    "react-dom": "^18",
-    "tailwindcss-animated": "^1.0.1"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "@types/node": "^20",
