--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
     "@cloudinary/react": "^1.11.2",
     "@cloudinary/url-gen": "^1.11.2",
     "@material-tailwind/react": "^2.1.2",
+    "@types/react-scroll": "^1.8.9",
     "classnames": "^2.3.2",
     "cloudinary": "^1.41.0",
     "encoding": "^0.1.13",
     "next": "13.5.4",
     "next-cloudinary": "^4.24.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-scroll": "^1.9.0"
   },
   "devDependencies": {
     "@iconify/react": "^4.1.1",
