--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "classnames": "^2.3.2",
     "cloudinary": "^1.41.0",
     "encoding": "^0.1.13",
+    "lucide-react": "^0.562.0",
     "next": "13.4.19",
     "next-cloudinary": "^4.24.0",
     "react": "^18",
