--- a/package.json
+++ b/package.json
@@ -21,9 +21,7 @@
     "next-cloudinary": "^4.24.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-scroll": "^1.9.0",
-    "react-tsparticles": "^2.12.2",
-    "tsparticles": "^2.12.0"
+    "react-scroll": "^1.9.0"
   },
   "devDependencies": {
     "@iconify/react": "^4.1.1",
